--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "axios": "^0.18.0",
     "vue-cli-plugin-axios": "0.0.4",
     "vue-cli-plugin-element": "^1.0.1",
+    "vue-cli-plugin-proxy": "^0.1.1",
     "vue-template-compiler": "^2.6.10"
   },
   "browserslist": [
